<resources>
    <string name="app_name">Streetsmart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_tag">img_tag</string>

    <string name="logo_name">Street Smart Logo</string>
    <string name="user_name">Jeff</string>
    <string name="user_tag">Shopping Ninja</string>
    <string name="overall_rank">112</string>
    <string name="coins">2100</string>
    <string name="content_settings">Settings</string>
    <string name="content_leaderboard">Leaderboard</string>
    <string name="content_coins">Coins</string>
    <string name="rewards_unlocked">Rewards Unlocked</string>
    <string name="rewards_unlocked_num">14</string>
    <string name="unlock_next_reward_at">Unlock Next Reward At</string>
    <string name="unlock_next_reward_at_coins">110</string>
    <string name="play_button">PLAY NOW FOR</string>
    <string name="next_game_prize_coins">50</string>
    <string name="game_question">There will be a question here</string>
    <string name="game_text_option_a">Option A</string>
    <string name="game_text_option_b">Option B</string>
    <string name="game_text_option_c">Option C</string>
    <string name="game_text_option_d">Option D</string>
    <string name="bid_price">$ 0</string>
    <string name="start_game_text">Getting Smart Questions For You...</string>
    <string name="start">Start</string>
    <string name="win">Congratulations!! You Won!!</string>
    <string name="lose">Oops! You Lose!</string>
    <string name="new_reward_unlocked">New Reward Unlocked!</string>
    <string name="go_to_home">Go To Home</string>
    <string name="splash_title">Street Smart</string>
    <string name="splash_text">Smart Quiz For Smart Shoppers</string>
</resources>
