<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.dashboard.DashboardActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="86dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:clickable="true"
                            android:scaleX="1"
                            android:scaleY="1">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/content_settings"
                                app:srcCompat="@drawable/selector_settings" />

                        </LinearLayout>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/circularImageView"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:elevation="2dp"
                            android:src="@drawable/tom_profile"
                            app:civ_border_color="@color/colorPrimaryDark"
                            app:civ_border_width="2dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/user_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="@color/userTagPrimary"
                            android:gravity="center"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/user_tag"
                            android:textColor="@android:color/white"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="64dp"
                            android:contentDescription="@string/content_leaderboard"
                            android:tint="@color/leaderboardPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_action_leaderboard" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/overall_rank"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_coins"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView2"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/coin" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="64dp"
                            android:text="@string/coins"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:id="@+id/linearLayout1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical"
                            android:padding="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rewards_unlocked"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/rewards_unlocked_num"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="72dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:background="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:orientation="vertical"
                            android:padding="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unlock_next_reward_at"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12dp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:contentDescription="@string/content_coins"
                                    app:srcCompat="@drawable/coin" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="2dp"
                                    android:text="@string/unlock_next_reward_at_coins"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/selector_play"
                android:clickable="true"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_button"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/content_coins"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/coin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/next_game_prize_coins"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/item_bottom_navigation" />

</RelativeLayout>